
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int exit (int) ;
 int fprintf (int ,char*,char*) ;
 scalar_t__ islower (int) ;
 int stderr ;

void check_addr(int addr, char *pattern)
{

 if (!(addr & 0xff) || !(addr & 0xff00) || !(addr & 0xff0000) ||
     !(addr & 0xff000000)) {
  fprintf(stderr, "Error: %s contains a 0x00!\n", pattern);
  exit(1);
 }


 if (((addr & 0xff) == 0x04) || ((addr & 0xff00) == 0x0400) ||
     ((addr & 0xff0000) == 0x040000) ||
     ((addr & 0xff000000) == 0x04000000)) {
  fprintf(stderr, "Error: %s contains a 0x04!\n", pattern);
  exit(1);
 }


 if (((addr & 0xff) == 0x0a) || ((addr & 0xff00) == 0x0a00) ||
     ((addr & 0xff0000) == 0x0a0000) ||
     ((addr & 0xff000000) == 0x0a000000)) {
  fprintf(stderr, "Error: %s contains a 0x0a!\n", pattern);
  exit(1);
 }


 if (((addr & 0xff) == 0x0d) || ((addr & 0xff00) == 0x0d00) ||
     ((addr & 0xff0000) == 0x0d0000) ||
     ((addr & 0xff000000) == 0x0d000000)) {
  fprintf(stderr, "Error: %s contains a 0x0d!\n", pattern);
  exit(1);
 }


 if ((islower(addr & 0xff)) || (islower((addr & 0xff00) >> 8)) ||
     (islower((addr & 0xff0000) >> 16)) ||
     (islower((addr & 0xff000000) >> 24))) {
  fprintf(stderr, "Error: %s contains a 0x61-0x7a!\n", pattern);
  exit(1);
 }
}
